Bug 1744098: Compare pt in remote rtcp-fb against remote pt, not local pt. r=mjf

Remote rtcp-fb is something that the receive codec negotiates, and the pt of
the receive codec can be different than the pt in the remote SDP. So, we need
to first determine which remote pt corresponds to the receive codec, and then
look for something that matches it.

Depends on D132827

Differential Revision: https://phabricator.services.mozilla.com/D132828